<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_tab_order"
        android:title="@string/tab_order" />
    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/ic_tab_sales"
        android:title="@string/tab_sales" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_tab_notification"
        android:title="@string/tab_notification" />
    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_tab_store"
        android:title="@string/tab_store" />
</menu>
